Changed grid spacing, mobile view needs fixing

--- a/src/Styles/Page.css
+++ b/src/Styles/Page.css
@@ -24,9 +24,10 @@ body {
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px,0.25fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(250px,0.25fr)); */
+    grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: auto;
-    grid-gap: 0.25rem;
+    grid-gap: 1rem;
 
     justify-content: space-evenly;
     justify-items: center;
@@ -36,9 +37,10 @@ body {
 
 .cards-no-filter {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px,0.25fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(250px,0.25fr)); */
+    grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
-    grid-gap: 0.25rem;
+    grid-gap: 1rem;
 
     justify-content: space-evenly;
     justify-items: center;
@@ -49,11 +51,11 @@ body {
 .results {
     display: grid;
     grid-template-columns: 0.35fr 1fr;
-    grid-gap: 0.25rem;
+    grid-gap: 1rem;
 }
 
 .results-no-filter {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 0.25rem;
+    grid-gap: 1rem;
 }
